--- a/index.html
+++ b/index.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Institute Name </title>
 </head>
 <body>
     
 </body>
+<!--Navbar-->
+<header class="header_area">
+        <nav class="navbar">
+            <div class="container">
+                <!-- brand name (Logo)-->
+                <a class="nav_brand" href="index.html" > 
+                    <img src="img/logo.png" alt="Brand Name">
+                </a>
+                <div class="nav_list">
+                    <ul class="navbar_ul">
+                        <li class="nav_li"><a class="nav_link active" href="http://">Home</a></li>
+                        <li class="nav_li"><a href="">About</a></li>
+                        <li class="nav_li"><a href="">Pages</a></li>
+                        <li class="nav_li"><a href="">Blog</a></li>
+                        <li class="nav_li"><a href="">Content</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+</header>
+
+
+
 </html>
