Front page banner area created

--- a/index.html
+++ b/index.html
@@ -30,7 +30,20 @@
             </div>
         </nav>
 </header>
-
+<!--Banner area-->
+<section class="home_banner">
+<div class="banner_inner">
+    <div class="banner_text">
+        <p class="banner_text_small">Best Online Education Service In the Sri Lanka </p>
+        <h2 class="banner_text_large">Best A/L Past Papers Collection in Srilanka</h2>
+        <div class="button_container">
+            <button class="button btn1"> Learn More</button>
+            <button class="button btn2"> See Papers</button>
+        </div>
+    </div>
+    
+</div>
+</section>
 
 
 </html>
