remove some unwaanted classes

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 </section>
 <!--Teachers area-->
 <section id="teachers" class="section_area">
-    <div class="section_inner space_top">
+    <div class="section_inner ">
         <h2 class="inner_header">Our Teachers</h2>
         <p class="inner_text">We have most experienced and knowledgeable Persons for you</p>
     </div>
