--- a/index.html
+++ b/index.html
@@ -17,18 +17,25 @@
     <nav class="navbar">
         <div class="container">
             <!-- brand name (Logo)-->
-            <a class="nav_brand" href="index.html">
-                <img src="img/logo.png" alt="Brand Name">
+            <a class="nav_brand txt_dark" href="index.html">
+                <div class="brand">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                        <!--! Font Awesome Pro 6.1.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+                        <path
+                            d="M45.63 79.75L52 81.25v58.5C45 143.9 40 151.3 40 160c0 8.375 4.625 15.38 11.12 19.75L35.5 242C33.75 248.9 37.63 256 43.13 256h41.75c5.5 0 9.375-7.125 7.625-13.1L76.88 179.8C83.38 175.4 88 168.4 88 160c0-8.75-5-16.12-12-20.25V87.13L128 99.63l.001 60.37c0 70.75 57.25 128 128 128s127.1-57.25 127.1-128L384 99.62l82.25-19.87c18.25-4.375 18.25-27 0-31.5l-190.4-46c-13-3-26.62-3-39.63 0l-190.6 46C27.5 52.63 27.5 75.38 45.63 79.75zM359.2 312.8l-103.2 103.2l-103.2-103.2c-69.93 22.3-120.8 87.2-120.8 164.5C32 496.5 47.53 512 66.67 512h378.7C464.5 512 480 496.5 480 477.3C480 400 429.1 335.1 359.2 312.8z" />
+                    </svg>
+                </div>
+                <h3 class="brand_txt">HigherDec</h3>
             </a>
-            <div class="nav_list">
-                <ul class="navbar_ul">
-                    <li class="nav_li"><a class="nav_link active" href="index.html">Home</a></li>
-                    <li class="nav_li"><a href="#welcome">About</a></li>
-                    <li class="nav_li"><a href="#classes">Classes</a></li>
-                    <li class="nav_li"><a href="#topics">Topics</a></li>
-                    <li class="nav_li"><a href="#teachers">Teachers</a></li>
-                </ul>
-            </div>
+        </div>
+        <div class="nav_list">
+            <ul class="navbar_ul">
+                <li class="nav_li active"><a class="nav_link " href="index.html">Home</a></li>
+                <li class="nav_li"><a href="index.html#welcome">About</a></li>
+                <li class="nav_li"><a href="index.html#classes">Classes</a></li>
+                <li class="nav_li"><a href="index.html#topics">Topics</a></li>
+                <li class="nav_li"><a href="index.html#teachers">Teachers</a></li>
+            </ul>
         </div>
     </nav>
 </header>
@@ -148,21 +155,24 @@
                 </ul>
             </div>
         </div>
-        <div class="card_area">
-            <div class="class_card card_dark">
-                <div class="card_img">
-                    <img src="./img/electronic.jpg" alt="Organic Chemistry Class">
-                </div>
-                <h2 class="card_headding heading_center txt_light" >Electronic Physics Class</h2>
-                <div class="txt_light ">
-                    <ul>
-                        <li>Instructor - Dr.Nimal Santha</li>
-                        <li>Past Papers Answers</li>
-                        <li>Model Papers Practrice for Structured Essay Questions</li>
-                    </ul>
+        <a href="physics_class.html">
+            <div class="card_area">
+                <div class="class_card card_dark">
+                    <div class="card_img">
+                        <img src="./img/electronic.jpg" alt="Organic Chemistry Class">
+                    </div>
+                    <h2 class="card_headding heading_center txt_light">Electronic Physics Class</h2>
+                    <div class="txt_light ">
+                        <ul>
+                            <li>Instructor - Dr.Nimal Santha</li>
+                            <li>Past Papers Answers</li>
+                            <li>Model Papers Practrice for Structured Essay Questions</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-        </div>
+        </a>
+
     </div>
     
 </section>
