Finalized the code, bug fixed, chemistry topic page added, css file formatted

--- a/chemistry_class.html
+++ b/chemistry_class.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Physics Class - Electronic</title>
+    <title>Chemistry Class - Organic</title>
 </head>
 
 <body>
@@ -37,9 +37,9 @@
             </div>
         </nav>
     </header>
-    <section class="topic_header electronic">
+    <section class="topic_header organic">
         <div class="topic_box">
-            <h2 class="topic_text txt_light">Electronic Physics Class</h2>
+            <h2 class="topic_text txt_light">Organic Chemistry Class</h2>
             <p class="topic_text_small txt_light">Home / Courses / Topics</p>
         </div>
 
@@ -47,7 +47,7 @@
     <section class="topic_body">
         <div class="topic_left">
             <div class="topic_cover">
-                <img class="topic_cover" src="/img/electronic.jpg" alt="Topic Cover">
+                <img class="topic_cover" src="/img/organic.jpg" alt="Topic Cover">
             </div>
             <div class="topic_data space_top_topic">
                 <h2 class="topic_data_heading">Objectives</h2>
@@ -85,19 +85,19 @@
             <div class="outline_info">
                 <ul>
                     <li class="outline_data">
-                        <p>Inquires about the principle of action of a semiconductor diode.</p>
+                        <p>Basic concepts of Organic Chemistry</p>
                         <span class="outline_rhs_span txt_dark">See More</span>
                     </li>
                     <li class="outline_data">
-                        <p>Uses the action of transistor for practical needs</p>
+                        <p>Diversity of organic compounds in terms of functional groups</p>
                         <span class="outline_rhs_span txt_dark">See More</span>
                     </li>
                     <li class="outline_data">
-                        <p> Investigates on the uses of operational amplifier.</p>
+                        <p>IUPAC nomenclature of organic compounds</p>
                         <span class="outline_rhs_span txt_dark">See More</span>
                     </li>
                     <li class="outline_data">
-                        <p>Uses logic gates to control the action of digital circuits</p>
+                        <p>Isomerism</p>
                         <span class="outline_rhs_span txt_dark">See More</span>
                     </li>
                 </ul>
@@ -110,7 +110,7 @@
                 <ul>
                     <li class="topic_info">
                         <p>Teachers Name</p>
-                        <span class="topic_rhs_span txt_dark">Dr.SNimal Santha</span>
+                        <span class="topic_rhs_span txt_dark">Dr.Saman Perera</span>
                     </li>
                     <li class="topic_info">
                         <p>Course Fee</p>
