--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Institute Name </title>
+    <title>HigherDec Institute</title>
 </head>
 
 <body>
@@ -46,8 +46,8 @@
             <p class="banner_text_small">Best Online Education Service In the Sri Lanka </p>
             <h2 class="banner_text_large">Best A/L Model Papers Collection in Srilanka</h2>
             <div class="button_container">
-                <button class="button btn1"> Learn More</button>
-                <button class="button btn2"> See Classes</button>
+                <a href="#welcome"><button class="button btn1"> Learn More</button></a>
+                <a href="#classes"><button class="button btn2"> See Classes</button></a>
             </div>
         </div>
 
@@ -141,7 +141,8 @@
         <h2 class="inner_header">Topics</h2>
         <p class="inner_text">The best Topics of the Lessons</p>
     </div>
-    <div class="card_area">
+    <a href="chemistry_class.html">
+        <div class="card_area">
         <div class="class_card card_dark">
             <div class="card_img">
                 <img src="./img/organic.jpg" alt="Organic Chemistry Class">
@@ -155,6 +156,8 @@
                 </ul>
             </div>
         </div>
+    </a>
+    
         <a href="physics_class.html">
             <div class="card_area">
                 <div class="class_card card_dark">
